--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
 		"eslint-config-next": "13.2.4",
 		"firebase": "^9.23.0",
 		"next": "13.2.4",
+		"pidusage": "^3.0.2",
+		"ps-node": "^0.1.6",
 		"react": "18.2.0",
 		"react-confetti": "^6.1.0",
 		"react-dom": "18.2.0",
